# speicherstadt

./: .travis.yml  Cargo.toml  Dockerfile  README.md  project.clj
.github/: dependabot.yml
dev/: user.clj
services/blob/: Cargo.toml
services/blob/src/: lib.rs  main.rs
services/chunks-fs/: Cargo.toml
services/chunks-fs/src/: chunks.rs  lib.rs  main.rs
services/chunks-fs/tests/: integration_test.rs
src/speicherstadt/: config.clj  main.clj  system.clj
src/speicherstadt/component/: chunk_storage.clj  metrics_store.clj
src/speicherstadt/component/chunk_storage/: file.clj  memory.clj
src/speicherstadt/endpoint/: blobs.clj  chunks.clj  metrics.clj
src/speicherstadt/middleware/: metrics.clj
test/speicherstadt/acceptance/: chunks.clj
