[package]
name = "blob"
version = "0.1.0"
authors = ["Christian Berg <berg.christian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multihash = "~0.9"
multibase = "~0.7"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
