[package]
name = "blob"
version = "0.1.0"
authors = ["Christian Berg <berg.christian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "~0.6"
multibase = "~0.7"
multihash = "~0.9"
reqwest = "~0.9"
router = "~0.6"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
structopt = "~0.3"
