[package]
name = "blob"
version = "0.1.0"
authors = ["Christian Berg <berg.christian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "~0.6"
log = "~0.4"
multibase = "~0.8"
multihash = "~0.10"
opentelemetry = "~0.3"
opentelemetry-jaeger = "~0.1"
pretty_env_logger = "~0.4"
reqwest = { version = "~0.10", features = ["blocking"] }
router = "~0.6"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
structopt = "~0.3"
thrift = "~0.13"
