[package]
name = "chunks-fs"
version = "0.1.0"
authors = ["Christian Berg <berg.christian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "~0.6"
router = "~0.6"
slog = "~2"
slog-term = "~2"
slog-async = "~2"
structopt = "~0.3"
tempfile = "~3"

[dev-dependencies]
duct = "~0.13"
reqwest = "~0.10"
